--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>1.1.2.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.facebook</groupId>
+            <artifactId>ktfmt</artifactId>
+            <version>0.58</version>
+        </dependency>
+
 
     </dependencies>
 
